--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="android_development_image">android development image</string>
     <string name="first_btn">1</string>
     <string name="second_btN">2</string>
+    <string name="log_in">Log In</string>
 </resources>
