--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="first_btn">1</string>
     <string name="second_btN">2</string>
     <string name="log_in">Log In</string>
+    <string name="help">Help</string>
+    <string name="sign_up">Sign Up</string>
 </resources>
